<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_facturas">Facturas</string>
    <string name="txt_sinfacturas">Aun no hay facturas</string>

    <string name="tx_femision">Fecha de emisión</string>
    <string name="tx_fvencimiento">Fecha de vencimiento</string>
    <string name="txt_formato">DD/MM/AAAA</string>
    <string name="txt_oblig">*Obligatorio</string>
    <string name="txt_btn">Añadir articulo</string>
	
	    <string name="tx_datos">Datos de facturación</string>
    <string name="tx_cliente">Cliente</string>
    <string name="tx_creacion">Creación</string>
    <string name="tx_vencimiento">Vencimiento</string>
    <string name="tx_articulos">Artículos</string>
    <string name="tx_subtotal">Subtotal</string>
    <string name="tx_impuesto">Impuesto</string>
    <string name="tx_total">Total</string>
    <string name="tx_btn">Pendiente</string>

    <string name="label_lista">Lista de factura</string>
    <string name="label_detalle">Detalles de factura</string>
    <string name="label_creacion">Creacion de factura</string>
    <string name="label_editar">Editar factura</string>

</resources>